--- a/Day-2/index.html
+++ b/Day-2/index.html
@@ -65,30 +65,6 @@
       }
     </style>
 
-    <script>
-      const secondHand = document.querySelector(".second-hand");
-      const minsHand = document.querySelector(".min-hand");
-      const hourHand = document.querySelector(".hour-hand");
-
-      function setClock() {
-        const date = new Date();
-
-        const seconds = date.getSeconds();
-        const secondsDegrees = (seconds / 60) * 360 + 90;
-        secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
-
-        const mins = date.getMinutes();
-        const minsDegrees = (mins / 60) * 360 + (seconds / 60) * 6 + 90;
-        minsHand.style.transform = `rotate(${minsDegrees}deg)`;
-
-        const hour = date.getHours();
-        const hourDegrees = (hour / 12) * 360 + (mins / 60) * 30 + 90;
-        hourHand.style.transform = `rotate(${hourDegrees}deg)`;
-      }
-
-      setInterval(setClock, 1000);
-
-      setClock();
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
