--- a/Day-3/index.html
+++ b/Day-3/index.html
@@ -72,20 +72,6 @@
       }
     </style>
 
-    <script>
-      const inputs = document.querySelectorAll(".controls input");
-
-      function handleUpdate() {
-        const suffix = this.dataset.sizing || "";
-        document.documentElement.style.setProperty(
-          `--${this.name}`,
-          this.value + suffix
-        );
-      }
-      inputs.forEach((input) => input.addEventListener("change", handleUpdate));
-      inputs.forEach((input) =>
-        input.addEventListener("mousemove", handleUpdate)
-      );
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
