--- a/Day-10/index.html
+++ b/Day-10/index.html
@@ -92,30 +92,6 @@
       </div>
     </div>
 
-    <script>
-      const checkboxes = document.querySelectorAll(
-        `.inbox input[type="checkbox"]`
-      );
-      let lastChecked,
-        inBetween = false;
-      function handleClick(e) {
-        if (e.shiftKey && this.checked) {
-          checkboxes.forEach((checkbox) => {
-            console.log(checkbox);
-            if (checkbox === this || checkbox === lastChecked) {
-              inBetween = !inBetween;
-              console.log("Starting to check them inBetween");
-            }
-            if (inBetween) {
-              checkbox.checked = true;
-            }
-          });
-        }
-        lastChecked = this;
-      }
-      checkboxes.forEach((checkbox) =>
-        checkbox.addEventListener("click", handleClick)
-      );
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
