--- a/Day-12/index.html
+++ b/Day-12/index.html
@@ -9,22 +9,6 @@
     ></script>
   </head>
   <body>
-    <script>
-      const pressed = [];
-      const secretCode = "ashutosh";
-      window.addEventListener("keyup", (e) => {
-        console.log(e.key);
-        pressed.push(e.key);
-        pressed.splice(
-          -secretCode.length - 1,
-          pressed.length - secretCode.length
-        );
-        if (pressed.join("").includes(secretCode)) {
-          console.log("Hello !! ding ding");
-          cornify_add();
-        }
-        console.log(pressed);
-      });
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
