--- a/Day-24/index.html
+++ b/Day-24/index.html
@@ -270,19 +270,6 @@
       </p>
     </div>
 
-    <script>
-      const nav = document.getElementById("main");
-      const topOfNav = nav.offsetTop;
-      function fixNav() {
-        if (window.scrollY >= topOfNav) {
-          document.body.style.paddingTop = nav.offsetHeight + "px";
-          document.body.classList.add("fixed-nav");
-        } else {
-          document.body.style.paddingTop = 0;
-          document.body.classList.remove("fixed-nav");
-        }
-      }
-      window.addEventListener("scroll", fixNav);
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
