--- a/Day-25/index.html
+++ b/Day-25/index.html
@@ -41,25 +41,6 @@
     </style>
 
     <button></button>
-    <script>
-      const divs = document.querySelectorAll("div");
-      const button = document.querySelector("button");
-      function logText(e) {
-        console.log(this.classList.value);
-        //e.stopPropagation(); // This stops bubbling
-      }
-      divs.forEach((div) =>
-        div.addEventListener("click", logText, { capture: false, once: true })
-      );
-      button.addEventListener(
-        "click",
-        () => {
-          console.log("click..!!!");
-        },
-        {
-          once: true,
-        }
-      );
-    </script>
+    <script src="script.js"></script>
   </body>
 </html>
