--- a/Day-30/index.html
+++ b/Day-30/index.html
@@ -12,7 +12,10 @@
   </head>
   <body>
     <h1>Whack-a-mole! <span class="score">0</span></h1>
-    <button onClick="startGame()">Start!</button>
+    <form>
+      <input type="text" />
+      <button onClick="startGame()">Start!</button>
+    </form>
 
     <div class="game">
       <div class="hole hole1">
